--- a/sokodanResource.rc
+++ b/sokodanResource.rc
@@ -9,3 +9,4 @@ box RCDATA "assests\\CrateDark_Blue.png"
 lvl1 RCDATA "levels\\level1.lvl"
 lvl2 RCDATA "levels\\level2.lvl"
 lvl3 RCDATA "levels\\level3.lvl"
+BoxInPlace RCDATA "assests\\CrateDark_Red.png"
