--- a/sokodan.dproj
+++ b/sokodan.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>20.1</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -174,6 +174,10 @@
             <ResourceType>RCDATA</ResourceType>
             <ResourceId>lvl3</ResourceId>
         </RcItem>
+        <RcItem Include="assests\CrateDark_Red.png">
+            <ResourceType>RCDATA</ResourceType>
+            <ResourceId>BoxInPlace</ResourceId>
+        </RcItem>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -299,6 +303,12 @@
                     </Platform>
                 </DeployFile>
                 <DeployFile LocalName="assests\CrateDark_Blue.png" Configuration="Release" Class="ProjectFile">
+                    <Platform Name="Win64">
+                        <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="assests\CrateDark_Red.png" Configuration="Release" Class="ProjectFile">
                     <Platform Name="Win64">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
